--- a/app/src/main/res/layout/fragment_find_pwd.xml
+++ b/app/src/main/res/layout/fragment_find_pwd.xml
@@ -55,7 +55,9 @@
                 android:layout_height="60dp"
                 android:background="@drawable/edittext"
                 android:hint="@string/input_phoneNumber"
+                android:inputType="phone"
                 android:paddingLeft="30dp"
+                android:singleLine="true"
                 android:textColor="@color/black"
                 android:textColorHint="@color/login_edittext_hint"
                 android:textSize="20sp" />
@@ -75,7 +77,9 @@
                 android:layout_height="60dp"
                 android:background="@drawable/edittext"
                 android:hint="@string/code"
+                android:inputType="number"
                 android:paddingLeft="30dp"
+                android:singleLine="true"
                 android:textColor="@color/black"
                 android:textColorHint="@color/login_edittext_hint"
                 android:textSize="20sp" />
@@ -85,8 +89,8 @@
                 android:layout_width="100dp"
                 android:layout_height="60dp"
                 android:layout_toEndOf="@id/et_code"
-                android:text="@string/get_code"
-                android:background="@color/main_lightblue"/>
+                android:background="@color/main_lightblue"
+                android:text="@string/get_code" />
         </RelativeLayout>
 
     </LinearLayout>
