--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:text="@string/app_cname"
+        android:textStyle="bold"
         android:textSize="25sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,6 +45,8 @@
                 android:layout_height="60dp"
                 android:background="@drawable/edittext"
                 android:hint="@string/input_phoneNumber"
+                android:singleLine="true"
+                android:inputType="phone"
                 android:paddingLeft="30dp"
                 android:textColor="@color/black"
                 android:textColorHint="@color/login_edittext_hint"
@@ -64,7 +67,9 @@
                 android:layout_height="60dp"
                 android:background="@drawable/edittext"
                 android:hint="@string/input_password"
+                android:inputType="textPassword"
                 android:paddingLeft="30dp"
+                android:singleLine="true"
                 android:textColor="@color/black"
                 android:textColorHint="@color/login_edittext_hint"
                 android:textSize="20sp" />
