--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -6,6 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.RegisterFragment">
+
     <ImageView
         android:id="@+id/iv_back"
         android:layout_width="20dp"
@@ -63,7 +64,9 @@
                 android:layout_height="60dp"
                 android:layout_toEndOf="@+id/tv_username"
                 android:background="@drawable/edittext"
+                android:inputType="text"
                 android:paddingLeft="15dp"
+                android:singleLine="true"
                 android:textColor="@color/black"
                 android:textColorHint="@color/login_edittext_hint"
                 android:textSize="20sp" />
@@ -91,7 +94,9 @@
                 android:layout_height="60dp"
                 android:layout_toEndOf="@+id/tv_school"
                 android:background="@drawable/edittext"
+                android:inputType="text"
                 android:paddingLeft="15dp"
+                android:singleLine="true"
                 android:textColor="@color/black"
                 android:textColorHint="@color/login_edittext_hint"
                 android:textSize="20sp" />
@@ -119,7 +124,9 @@
                 android:layout_height="60dp"
                 android:layout_toEndOf="@+id/tv_studentNumber"
                 android:background="@drawable/edittext"
+                android:inputType="number"
                 android:paddingLeft="15dp"
+                android:singleLine="true"
                 android:textColor="@color/black"
                 android:textColorHint="@color/login_edittext_hint"
                 android:textSize="20sp" />
@@ -149,6 +156,8 @@
                 android:layout_toEndOf="@+id/tv_phoneNumber"
                 android:background="@drawable/edittext"
                 android:paddingLeft="15dp"
+                android:inputType="phone"
+                android:singleLine="true"
                 android:textColor="@color/black"
                 android:textColorHint="@color/login_edittext_hint"
                 android:textSize="20sp" />
@@ -177,6 +186,8 @@
                 android:layout_toEndOf="@+id/tv_password"
                 android:background="@drawable/edittext"
                 android:paddingLeft="15dp"
+                android:singleLine="true"
+                android:inputType="text"
                 android:textColor="@color/black"
                 android:textColorHint="@color/login_edittext_hint"
                 android:textSize="20sp" />
@@ -195,8 +206,4 @@
         app:layout_constraintTop_toBottomOf="@id/ll_user_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
-
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
