--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -155,8 +155,8 @@
                 android:layout_height="60dp"
                 android:layout_toEndOf="@+id/tv_phoneNumber"
                 android:background="@drawable/edittext"
-                android:paddingLeft="15dp"
                 android:inputType="phone"
+                android:paddingLeft="15dp"
                 android:singleLine="true"
                 android:textColor="@color/black"
                 android:textColorHint="@color/login_edittext_hint"
@@ -185,9 +185,9 @@
                 android:layout_height="60dp"
                 android:layout_toEndOf="@+id/tv_password"
                 android:background="@drawable/edittext"
+                android:inputType="text"
                 android:paddingLeft="15dp"
                 android:singleLine="true"
-                android:inputType="text"
                 android:textColor="@color/black"
                 android:textColorHint="@color/login_edittext_hint"
                 android:textSize="20sp" />
@@ -197,7 +197,7 @@
 
 
     <Button
-        android:id="@+id/bt_gologin"
+        android:id="@+id/bt_register"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:background="@drawable/login_button"
