--- a/app/src/main/res/layout/fragment_sort.xml
+++ b/app/src/main/res/layout/fragment_sort.xml
@@ -4,14 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragment.PresentFragment">
+    tools:context=".fragment.SortFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:id="@+id/tv_free"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/free"
+        android:text="@string/sort"
         android:textStyle="bold"
         android:layout_marginTop="50dp"
         android:textSize="20sp"
