--- a/app/src/main/res/layout/goods2_item.xml
+++ b/app/src/main/res/layout/goods2_item.xml
@@ -18,6 +18,13 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="20dp" />
+
+        <ImageView
+            android:id="@+id/iv_delete"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/delete" />
         <TextView
             android:id="@+id/tv_goodsName"
             android:layout_width="wrap_content"
