--- a/app/src/main/res/layout/activity_goods_detail2.xml
+++ b/app/src/main/res/layout/activity_goods_detail2.xml
@@ -87,13 +87,23 @@
                 android:id="@+id/tv_goodsPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="23dp"
                 android:layout_marginTop="10dp"
                 android:text="1899"
                 android:textColor="@color/quit_red"
                 android:textSize="18sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_goodsTitle" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="13dp"
+                android:layout_marginEnd="3dp"
+                android:text="￥"
+                android:textColor="@color/quit_red"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toStartOf="@+id/tv_goodsPrice"
+                app:layout_constraintTop_toBottomOf="@+id/tv_goodsTitle" />
 
             <TextView
                 android:id="@+id/tv_goodsPrimePrice"
@@ -123,8 +133,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:text="@string/detailsContent"
                 android:inputType="textMultiLine"
+                android:text="@string/detailsContent"
                 android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@id/tv_details"
                 app:layout_constraintTop_toTopOf="@id/tv_details" />
