--- a/app/src/main/res/layout/goods_item.xml
+++ b/app/src/main/res/layout/goods_item.xml
@@ -6,16 +6,19 @@
     android:layout_margin="8dp"
     app:cardCornerRadius="10dp">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="180dp"
-        android:layout_height="250dp"
-        android:orientation="vertical">
+        android:layout_height="250dp">
 
         <ImageView
             android:id="@+id/iv_goods"
             android:layout_width="180dp"
             android:layout_height="180dp"
-            android:layout_gravity="center_horizontal" />
+            android:scaleType="centerCrop"
+            android:layout_gravity="center_horizontal"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
             android:id="@+id/tv_goodsName"
@@ -24,17 +27,32 @@
             android:layout_gravity="left"
             android:layout_marginStart="5dp"
             android:maxLength="20"
-            android:layout_marginTop="5dp" />
-
+            android:layout_marginTop="5dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/iv_goods"/>
+        <TextView
+            android:id="@+id/tv_rmb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textColor="@color/quit_red"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="5dp"
+            android:text="￥"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_goodsName"
+            />
         <TextView
             android:id="@+id/tv_goodsPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:layout_marginStart="5dp"
-            android:textColor="@color/quit_red" />
+            android:layout_marginStart="3dp"
+            android:textColor="@color/quit_red"
+            app:layout_constraintStart_toEndOf="@id/tv_rmb"
+            app:layout_constraintTop_toBottomOf="@+id/tv_goodsName"/>
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </androidx.cardview.widget.CardView>
