--- a/app/src/main/res/layout/order_item.xml
+++ b/app/src/main/res/layout/order_item.xml
@@ -18,13 +18,15 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="20dp" />
-
+        <!--
         <ImageView
             android:id="@+id/iv_delete"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_alignParentEnd="true"
             android:src="@drawable/delete" />
+        -->
+
         <TextView
             android:id="@+id/tv_goodsName"
             android:layout_width="wrap_content"
@@ -33,7 +35,6 @@
             android:layout_marginTop="40dp"
             android:layout_marginStart="10dp"
             android:maxLength="20"/>
-
         <TextView
             android:id="@+id/tv_goodsPrice"
             android:layout_width="wrap_content"
@@ -42,6 +43,7 @@
             android:layout_alignParentBottom="true"
             android:layout_marginEnd="30dp"
             android:layout_marginBottom="40dp"
+            android:textSize="18sp"
             android:textColor="@color/quit_red" />
         <TextView
             android:layout_width="wrap_content"
@@ -53,6 +55,14 @@
             android:textSize="14sp"
             android:textColor="@color/quit_red"
             android:text="￥"/>
+        <TextView
+            android:id="@+id/tv_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="30dp"
+            android:layout_marginBottom="20dp"/>
 
     </RelativeLayout>
 
